# MCU-Review

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arm-none-eabi-gcc.cmake
App/: CMakeLists.txt  main.c
Common/: CMakeLists.txt
Common/DataStructures/: ring_buffer.c  ring_buffer.h
Components/: CMakeLists.txt
Config/: CMakeLists.txt  STM32F103xE_FLASH.ld  stm32f1xx_hal_conf.h
Drivers/: CMakeLists.txt
Hardware/: CMakeLists.txt
Hardware/BSP/24c02/: 24c02.c  24c02.h
Hardware/BSP/i2c/: i2c_sw.c  i2c_sw.h
Hardware/BSP/led/: led.c  led.h
Hardware/BSP/spi/: spi.c  spi.h
Hardware/BSP/usart/: uart.c  uart.h
Hardware/BSP/w25q64/: w25q64.c  w25q64.h
Hardware/SYSTEM/delay/: delay.c  delay.h
Hardware/SYSTEM/retarget/: retarget.c  retarget.h
Hardware/SYSTEM/sys/: sys.c  sys.h
Middlewares/: CMakeLists.txt
Startup/: CMakeLists.txt
